update build config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,12 @@ version = "0.1.0"
 description = ""
 authors = ["Josh Burns <joshyburnss@gmail.com>"]
 readme = "README.md"
+include = [
+  "assets/buzz.wav"
+]
+packages = [
+  { include = "chip8" }
+]
 
 [tool.poetry.dependencies]
 python = "^3.11"
